force-app/main/default/objects/DynamicUi__mdt/DynamicUi__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Ui</label>
    <pluralLabel>Dynamic Ui</pluralLabel>
</CustomObject>