force-app/main/default/objects/DynamicUi__mdt/fields/Illegally_Named__c.field-meta.xml
<CustomField>
    <fullName>Illegally_Named__c</fullName>
    <label>Illegally Named</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>