force-app/main/default/objects/DynamicUi__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>