force-app/main/default/objects/DynamicUi__mdt/fields/UiApiName__c.field-meta.xml
<CustomField>
    <fullName>UiApiName__c</fullName>
    <label>UI API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>