force-app/main/default/objects/DynamicUi__mdt/fields/UiLocation__c.field-meta.xml
<CustomField>
    <fullName>UiLocation__c</fullName>
    <label>Ui Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>