force-app/main/default/objects/DynamicUi__mdt/fields/UiType__c.field-meta.xml
<CustomField>
    <fullName>UiType__c</fullName>
    <label>UI Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aura</fullName>
                <default>true</default>
                <label>Aura</label>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Screen Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>